<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EditPlayerActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay" />

    </com.google.android.material.appbar.AppBarLayout>

    <RelativeLayout xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical" android:layout_marginTop="10dp">

        <EditText
            android:id="@+id/edit_player_name"
            android:layout_width="match_parent"
            android:layout_height="@dimen/player_edit_height"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_marginTop="?attr/actionBarSize"
            android:fontFamily="sans-serif-light"
            android:hint="@string/hint_player_name"
            android:inputType="textAutoComplete"
            android:padding="@dimen/small_padding"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/edit_player_jersey_number"
            android:layout_width="140dp"
            android:layout_height="@dimen/player_edit_height"
            android:layout_below="@id/edit_player_name"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="20dp"
            android:hint="@string/hint_jersey_number"
            android:inputType="number"
            android:textSize="18sp" />

        <Spinner
            android:id="@+id/edit_player_spinner_position"
            android:layout_width="150dp"
            android:layout_height="@dimen/player_edit_height"
            android:layout_alignStart="@+id/edit_player_jersey_number"
            android:layout_alignLeft="@+id/edit_player_jersey_number"
            android:layout_alignTop="@id/edit_player_jersey_number"
            android:layout_marginStart="199dp"
            android:layout_marginLeft="199dp" />

        <Button
            android:id="@+id/edit_player_btn_save"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            android:onClick="onEditPlayerSaveTeamClick"
            android:text="@string/button_save"
            android:textColor="@color/buttonLabel"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:layout_below="@id/edit_player_jersey_number"/>

        <Button
            android:id="@+id/edit_player_btn_cancel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            android:onClick="onEditPlayerCancelClick"
            android:text="@string/cancel"
            android:textColor="@color/buttonLabel"
            android:layout_below="@id/edit_player_btn_save"/>
    </RelativeLayout>


</androidx.coordinatorlayout.widget.CoordinatorLayout>